<resources>
    <string name="app_name">pDAM</string>
    <string name="app_logo">logo de la aplicación</string>
    <string name="title_activity_p_p_a">PPAActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="cerrar_secion">Cerrar seción</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="title_activity_propiedad">Propiedades</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="propiedades">Propiedades</string>
    <string name="prop_nombre_descriptivo">Nombre descriptivo</string>
    <string name="prop_provincia">Provincia</string>
    <string name="prop_tipo">Tipo</string>
    <string name="prop_periodo">Periodo</string>
    <string name="prop_precio">Precio por periodo</string>
    <string name="prop_cp">Codigo Postal</string>
    <string name="prop_municipio">Municipio</string>
    <string name="prop_direccion">Dirección</string>
    <string name="prop_hint_tipo_de_la_propiedad">habitación, piso, etc.</string>
    <string name="prop_hint_breve_y_clara">breve y claro</string>
    <string name="prop_hint_25">25</string>
    <string name="prop_hint_ej_almer_a_granada">ej. Almería, Granada</string>
    <string name="prop_himt_nombre_de_la_poblacion">nombre de la población</string>
    <string name="prop_hint_ej_04740">ej. 04740</string>
    <string name="prop_hint_tipo_de_via_edificio_bloue_piso_puerta">tipo de via, edificio, bloue, piso, puerta</string>
    <string name="prop_hint_horas_dias_meses">horas, dias, meses</string>
    <string name="btnaddprop">btnADDprop</string>
    <string name="menu_about">About</string>
</resources>