<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_verPerfil"
        android:title="@string/ver_perfil"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_propiedades"
        android:title="@string/menu_inmuebles"
        android:orderInCategory="6"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="7"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_cerrarSesion"
        android:title="@string/cerrar_secion"
        android:orderInCategory="10"
        app:showAsAction="never"
        />

</menu>