<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.propiedad.PropiedadLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:background="@color/bg_gris"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- ************************* FOTO ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                android:layout_gravity="center"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/inmb_iv_uFoto"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/ic_hamster_svg" />

                    <Button
                        android:id="@+id/inmb_btn_SelectImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Selecciónar imagen"
                        android:textSize="12sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- ************************* Nombre Descriptivo ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbNombreDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_nombre_descriptivo"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbNombreDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_breve_y_clara"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- ************************* Descripción completa ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbDescCompleta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Descripción completa"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbDescCompleta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Descripción completa"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- ************************* Tipo ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbTipo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_tipo"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbTipo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_tipo_de_la_propiedad"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* Periodo *************************  -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbPeriodo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_periodo"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbPeriodo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_horas_dias_meses"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* Precio ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_precio"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_25"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* Provincia ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbProvincia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_provincia"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbProvincia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_ej_almer_a_granada"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* Municipio ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbMunicipio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_municipio"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbMunicipio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_himt_nombre_de_la_poblacion"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* CP ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbCP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_cp"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbCP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_ej_04740"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* Dirección ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/prop_direccion"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/inmb_et_inmbDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prop_hint_tipo_de_via_edificio_bloue_piso_puerta"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- ************************* Disponibilidad ************************* -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:id="@+id/inmb_tv_inmbDisp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:text="Disponible?"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/inmb_sw_inmbDisp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textSize="25sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">
                <Button
                    android:id="@+id/prop_ver_sobre_la_mapa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Ver sobre la mapa"></Button>
            </androidx.cardview.widget.CardView>

            -->

            <!-- |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| -->

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>